<resources>
    <string name="app_name">FirstProject</string>
    <string name="java" translatable="false">Java</string>
    <string name="android" translatable="false">Android</string>
    <string name="kotlin" translatable="false">Kotlin</string>
    <string name="javascript" translatable="false">Javascript</string>
    <string name="desc_text" translatable="false">Souphattra Hotel
                located next to the UNESCO World Heritage town in Luang
                Prabang,Souphattra Hotel radiates all the understated
                elegance and charm of a colonial-era mansion,luxuriously
                appointed with refined furnishings throughout.Guests will
                enjoy its  excellent facilities and authentic Lao hospitality.
    </string>
    <string name="description" translatable="false">Description</string>
    <string name="telephone_number" translatable="false">+ 856 21211222</string>
    <string name="Luang_Prabang_Laos" translatable="false">Luang,Prabang Laos</string>
    <string name="current_password" translatable="false">Current password</string>
    <string name="new_password" translatable="false">New password</string>
    <string name="confirm_password" translatable="false">Confirm password</string>
    <string name="save" translatable="false">SAVE</string>
    <string name="android_studio" translatable="false">Android Studio</string>
    <string name="kfc_mashtots" translatable="false">KFC Mashtots</string>
    <string name="twister" translatable="false">Twister</string>
    <string name="_1150" translatable="false">1150</string>
    <string name="_amd" translatable="false">amd</string>
    <string name="row1" translatable="false">Row 1</string>
    <string name="Row2" translatable="false">Row 2 column!</string>
    <string name="Row3" translatable="false">Row3 column 2</string>
    <string name="Row2_2" translatable="false">Row2 column2</string>
    <string name="row2_1" translatable="false">Row2 column!</string>
    <string name="row2_2" translatable="false">Row2 column2</string>
    <string name="row2_3" translatable="false">Row2 column3</string>
    <string name="row3_1" translatable="false">Row3 column1</string>
    <string name="row3_2" translatable="false">Row3 column2</string>
    <string name="twister_text" translatable="false">Tender pieces of chicken fillet with crispy spicy or original bread crumbs,juicy lettuce,slices of tomato, tender sauce wrapped in a wheat loshik and fried in toast</string>
    <string name="tesak" translatable="false">տեսակ</string>
    <string name="spicy" translatable="false">spicy</string>
    <string name="original" translatable="false">original</string>
    <string name="addings" translatable="false">հավելում</string>
    <string name="cheese1" translatable="false">պանտի 1 շերտ</string>
    <string name="cheese2" translatable="false">պանրի 2 շերտ</string>
    <string name="cheese3" translatable="false">պանրի 3 շերտ</string>
    <string name="comments" translatable="false">Your comments to the order</string>
    <string name="add_to_card" translatable="false">ADD TO CARD</string>
    <string name="change_password" translatable="false">Փոխել գաղտնաբառը</string>
    <string name="enter_pin" translatable="false">Սահմանել PIN կոդ մուտք գործելու համար</string>
    <string name="blocking" translatable="false">Փակելիս բլոկավորել</string>
    <string name="change_language" translatable="false">Փոխել լեզուն</string>
    <string name="push_notifications" translatable="false">PUSH NOTIFICATIONS</string>
    <string name="preferences" translatable="false">Preferences</string>
    <string name="card_new" translatable="false">NEW</string>
    <string name="match_alerts" translatable="false">Match Alerts</string>
    <string name="get_ntf" translatable="false">Get instant notifications for match events</string>
    <string name="football" translatable="false">Football</string>
    <string name="tennis" translatable="false">Tennis</string>
    <string name="Basketball" translatable="false">Basketball</string>
    <string name="hockey" translatable="false">Hockey</string>
    <string name="cricket" translatable="false">Cricket</string>
    <string name="in_app_ntf" translatable="false">IN-APP NOTIFICATIONS</string>
    <string name="favourite_match" translatable="false">Favourite Match</string>
    <string name="favourite_league" translatable="false">Favourite League</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="second_activity" translatable="false">Second Activity</string>
    <string name="button" translatable="false">Button</string>
    <string name="hide_progress" translatable="false">Hide Progress</string>
    <string name="show_progress" translatable="false">Show progress</string>
    <string name="get_rating" translatable="false">Get rating</string>
    <string name="learn_everything_about_spinner" translatable="false">Learn everything about Spinner</string>
    <string name="my_third_activity" translatable="false">My Third Activity</string>
    <string name="on" translatable="false">On</string>
    <string name="off" translatable="false">Off</string>
    <string name="enter_your_name" translatable="false">Enter your name</string>
    <string name="enter" translatable="false">Enter</string>
    <string name="value" translatable="false">Value</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="tomasso_trattoria_enoteca" translatable="false"><![CDATA[Tomasso Trattoria & Enoteca]]></string>
    <string name="tomasso_text" translatable="false"><![CDATA[Tomasso Trattoria & Enoteca prepares
     some of the finest Italian food in the area.We have something
     special to please ever...]]></string>
    <string name="restaurants" translatable="false">Restaurants</string>
    <string name="request" translatable="false">Request</string>
    <string name="search_by_place_name" translatable="false">Search by place name</string>
    <string name="call" translatable="false">Call</string>
    <string name="share" translatable="false">Share</string>
    <string name="choose_browser" translatable="false">Choose Browser</string>
    <string name="chooser_title" translatable="false">Choose Title</string>
    <string name="ktor_pizza" translatable="false"> Ktor Pizza</string>
    <string name="_4_8" translatable="false">4.8</string>
    <string name="delivery_fee_800" translatable="false">Delivery Fee 800</string>
    <string name="min_order_fee_1400" translatable="false">Min Order Fee 1400</string>
    <string-array name="amd">
        <item> AMD</item>
    </string-array>
    <string name="closed" translatable="false">CLOSED</string>
    <string name="_11_00_23_00" translatable="false">11:00-23:00</string>
    <string name="pizza_6_pieces" translatable="false">Pizza 6 pieces</string>
    <string name="pizza_meat_assorted_medium" translatable="false">Pizza meat assorted medium</string>
    <string name="pizza_meat_assorted" translatable="false">Pizza meat assorted</string>
    <string name="medium" translatable="false">medium</string>
    <string name="_4000" translatable="false">4000</string>
    <string name="input_chip" translatable="false">Input chip</string>
    <string name="choice_chip" translatable="false">Chip Choice</string>
    <string name="filter_chip" translatable="false">Filter chip</string>
    <string name="action_chip" translatable="false">Action Chip</string>
    <string name="scrollview_example" translatable="false">ScrollView example</string>
    <string name="vertical_scrollview_example" translatable="false">Vertical ScrollView example</string>
    <string name="button_1" translatable="false">Button 1</string>
    <string name="button_2" translatable="false">Button 2</string>
    <string name="button_3" translatable="false">Button 3</string>
    <string name="button_4" translatable="false">Button 4</string>
    <string name="button_5" translatable="false">Button 5</string>
    <string name="button_6" translatable="false">Button 6</string>
    <string name="button_7" translatable="false">Button 7</string>
    <string name="button_8" translatable="false">Button 8</string>
    <string name="button_9" translatable="false">Button 9</string>
    <string name="button_10" translatable="false">Button 10</string>
    <string name="button_11" translatable="false">Button 11</string>
    <string name="button_12" translatable="false">Button 12</string>
    <string name="button_13" translatable="false">Button 13</string>
    <string name="button_14" translatable="false">Button 14</string>
    <string name="button_15" translatable="false">Button 15</string>
    <string name="button_16" translatable="false">Button 16</string>
    <string name="button_17" translatable="false">Button 17</string>
    <string name="button_18" translatable="false">Button 18</string>
    <string name="button_19" translatable="false">Button 19</string>
    <string name="button_20" translatable="false">Button 20</string>
    <string name="alert1" translatable="false">Alert1</string>
    <string name="alert2" translatable="false">Alert2</string>
    <string name="alert3" translatable="false">Alert3</string>
    <string name="alert4" translatable="false">Alert4</string>
    <string name="you_won_t_be_able_to_recover_this_file" translatable="false">You won\'t be able to recover this file</string>
    <string name="you_won_t_be_able_to_recover" translatable="false">You won\'t be abe to recover</string>
    <string name="this_file" translatable="false">this file!</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="deleted" translatable="false">Deleted!</string>
    <string name="are_you_sure" translatable="false">Are you sure?</string>
    <string name="your_imiginary_file_has_been" translatable="false">Your imiginary file has been</string>
    <string name="deleted_" translatable="false">deleted!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="yes_delete_it" translatable="false">Yes,delete it!</string>
    <string name="theming_chip" translatable="false">Theming chip</string>
    <string name="sorting" translatable="false">SORTING</string>
    <string name="sorting2" translatable="false">Sorting</string>
    <string name="newest" translatable="false">Newest</string>
    <string name="categories" translatable="false">Categories</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="apply" translatable="false">Apply</string>
    <string name="arts_entertainment" translatable="false"><![CDATA[Arts & Entertainment]]></string>
    <string name="go_to_2nd_activity" translatable="false">Go to the 2nd activity</string>
    <string name="go_to_the_3rd_activity" translatable="false">Go to the 3rd activity</string>
    <string name="returned_textview" translatable="false">Returned textView</string>
    <string name="returned_textview2" translatable="false">Returned textView2</string>
    <string name="filters" translatable="false">Filters</string>
    <string name="reset_all" translatable="false">Reset all</string>
    <string name="sort_by" translatable="false">Sort by</string>
    <string name="date_newest_first" translatable="false">Date (newest first)</string>
    <string name="date_oldest_first" translatable="false">Date (oldest first)</string>
    <string name="bug_fix_confirmation" translatable="false">Bug Fix Confirmation</string>
    <string name="task_type" translatable="false">Task type</string>
    <string name="bug_reproductions" translatable="false">Bug Reproductions</string>
    <string name="apply_filters" translatable="false">Apply Filters</string>
    <string name="contacts" translatable="false">Contacts</string>
</resources>