<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vertical_scrollview_example"
            android:id="@+id/textView"
            android:layout_gravity="center" />


        <ScrollView android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twenty_dp"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:orientation="vertical" >

                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_1" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_2" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_3" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_4" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_5" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_6" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_7" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_8" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_9" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_10" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_11" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_12" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_13" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_14" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_15" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_16" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_17" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_18" />

                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_19" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/button_20" />

                </LinearLayout>

        </ScrollView>

</LinearLayout>

