<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/gallery"
        android:title="@string/gallery"
        android:icon="@drawable/ic_baseline_photo_library_24"/>

    <item android:id="@+id/contacts"
        android:title="@string/contacts"
        app:showAsAction="ifRoom"
        android:icon="@drawable/contacts_outline"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_share_24"
         />


</menu>