<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottomDialog.BottomDialogFragment">


    <View
        android:id="@+id/view_bottom"
        android:layout_width="@dimen/sixty_dp"
        android:layout_height="3dp"
        android:background="@color/light_grey"
        android:layout_marginTop="@dimen/ten_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hundred_dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/ibmplex_sans_bold"
        android:gravity="center"
        android:text="@string/filters"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bottom"
        app:layout_constraintEnd_toStartOf="@id/reset_all"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibmplex_sans_bold"
        android:text="@string/reset_all"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/twenty_sp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginStart="@dimen/fifteen_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/filters" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/hundred_dp"
        android:fontFamily="@font/ibmplex_sans_bold"
        android:gravity="center"
        android:text="@string/sort_by"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_by">

     <RadioButton
         android:id="@+id/rd_btn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/date_newest_first"
         android:textSize="@dimen/twenty_five_sp"
         />

        <RadioButton
            android:id="@+id/rd_btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:text="@string/date_oldest_first"
            android:textSize="@dimen/twenty_five_sp"/>


    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/task_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_dp"
        android:fontFamily="@font/ibmplex_sans_bold"
        android:text="@string/task_type"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintHorizontal_bias="0.05"/>

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btn_bug_fix"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/bug_fix_confirmation"
       android:layout_marginTop="@dimen/twenty_dp"
       android:layout_marginStart="@dimen/_16dp"
       app:layout_constraintTop_toBottomOf="@id/task_type"
       app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty_dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/bug_reproductions"
        app:layout_constraintBottom_toBottomOf="@id/btn_bug_fix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_bug_fix"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters"
        android:textSize="@dimen/twenty_sp"
        android:background="@color/light_blue"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginTop="@dimen/fifty_dp"
        android:layout_marginBottom="@dimen/thirty_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_bug_fix"
        app:layout_constraintBottom_toBottomOf="parent"
       />


</androidx.constraintlayout.widget.ConstraintLayout>