<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:chipSpacingHorizontal="20dp"
        style="@style/Widget.MaterialComponents.ChipGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/input_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_chip"
            style="@style/chipInput"
            app:chipBackgroundColor="@color/light_red"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/choice_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/ThemeOverlay.MyApp.Chip.Choice"
            app:chipBackgroundColor="@color/teal_200"
            android:text="@string/choice_chip"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/choice_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.MyApp.Chip.Filter"
            app:chipBackgroundColor="@color/teal_700"
            android:checked="true"
            android:text="@string/filter_chip"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/action_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipIconEnabled="true"
            app:chipIcon="@drawable/outline_favorite_black_18"
            app:chipIconTint="@color/purple_200"
            app:chipBackgroundColor="@color/purple_500"
            android:text="@string/action_chip"
            />

    </com.google.android.material.chip.ChipGroup>



</androidx.constraintlayout.widget.ConstraintLayout>


